Feb 23, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.7

Feb 20, 2008 - chris ---------------------------------------------------
o fixed endian conversion bug when opening a Database file, which was created
    on a little-endian system, some page addresses were broken

Sep 23, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.6

Sep 14, 2008 - chris
o a new flag HAM_CACHE_UNLIMITED uses unlimited cache
o added a new chapter about Transactions to the tutorial

Sep 12, 2008 - chris
o ./configure has a new option --enable-system-zlib which links against the 
    system-wide installed zlib (-lz)

Sep 11, 2008 - chris
o unittests now compile with gcc 4.3.x and glibc 2.8 (thanks, Tiziano Müller)
o C++ api now has template function for class key: key.set<T>(T &t)
    (thanks, Tiziano Müller)
o added macro AC_PROG_CXX to ./configure (thanks, Tiziano Müller)

Aug 07, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.5

Aug 03, 2008 - chris
o On Linux for ARM: disable pread/pwrite; pwrite seems to be buggy, 
    at least in the maemo.org 4.1 Environment for ATMEL CPU's.

Aug 02, 2008 - chris
o If available, the flag O_NOATIME is now specified when opening or creating 
    files

Jul 23, 2008 - chris
o Fixed potential NULL pointer access and a bug in ham_dump.c 
    (thanks, Zhao Xinjian)

Jul 21, 2008 - chris
o Fixed potential buffer overflow (thanks, Tielei Wang)

Jul 19, 2008 - chris
o The C++ wrapper now supports Transactions (see ham::db::begin(),
    ham::txn::abort(), ham::txn:commit())

Jul 18, 2008 - chris
o ham_close now supports the flag HAM_TXN_AUTO_COMMIT
o ham_env_close now supports the flag HAM_TXN_AUTO_COMMIT

Jun 28, 2008 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.4

Jun 27, 2008 - chris